namespace DSLController_MModell.MetaModell.Action
{
    public enum MHttpBinding
    {
        None, Query, Route, Body
    }

}
