using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DSLController_MModell.MetaModell.Attribute
{
    public interface IMAttribute {  }

}
