namespace DSLController_MModell.MetaModell.Attribute
{
    public class MProduces : IMAttribute
    {
        public string MediaType { get; set; } = "application/json";

        public MProduces(string mediaType)
        {
            MediaType = mediaType;
        }
    }

}
