namespace DSLController_MModell.MetaModell.Attribute
{
    public enum MRole
    {
        AllowAnonymus, Admin, User
    }

}
