@startuml

class MController{}
class MName{}
interface IMAttribute{}
class MParameter{
    string name
    Type type
    HttpBindings binding
}

class MAction{
    bool ValidateModelBinding
}
class MAuthorize{
    Roles role
}
class MRoute{
    string path
}
interface MResult{}
class MAntiforgery{
    
}
class MHttpmethod{
    HttpMethod httpmethod
}
class "ActionResult<T>" as MActionResult {}
class IMActionResult{}

enum MHttpBindings{
    Query, Route, Body...
}
enum MRoles {
    Admin, User
}
class MConsumes{
    application/json
}
class MProduces{
    application/json
}



MController *--> MAction
MController *-> IMAttribute
MController *--> MName

MAction *--> IMAttribute
MAction  *--> MParameter
MAction *--> MResult
MAction *--> MName

MAntiforgery ..|> IMAttribute
MAuthorize .|> IMAttribute
MHttpmethod ..|> IMAttribute
MConsumes ..|> IMAttribute
MProduces ..|> IMAttribute
MRoute ..|> IMAttribute

MParameter --> MHttpBindings
MAuthorize --> MRoles

MActionResult ..|> MResult
IMActionResult ..|> MResult





@enduml